# Seiya

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  操作步骤说明文档.md
doc/: make.bat
examples/console/: installer_logo_ico.cfg  installer_logo_jpg.cfg  installer_logo_png.cfg
nsist/: __init__.py  configreader.py
seiya/: __init__.py  __main__.py
seiya/core/: __init__.py  commands.py  configreader.py  copymodules.py  util.py
