[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seiya"
version = "1.0.0"
description = "Enhanced Python Windows Installer Builder - fork of pynsist with .exe launchers, auto dependency resolution and custom logo support"
authors = [
    {name = "Seiya Contributors"},
]
maintainers = [
    {name = "Seiya Contributors"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests",
    "jinja2",
    "yarg",
    "distlib >=0.3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]

[project.optional-dependencies]
image = [
    "Pillow >=9.0.0",
]
test = [
    "testpath",
    "responses",
    "pytest",
]

[project.scripts]
seiya = "seiya:main"
pynsist = "nsist:main"

[project.urls]
Homepage = "https://github.com/seiya-builder/seiya"
Documentation = "https://github.com/seiya-builder/seiya#readme"
Source = "https://github.com/seiya-builder/seiya"
Issues = "https://github.com/seiya-builder/seiya/issues"

[tool.flit.module]
name = "seiya"

[tool.flit.sdist]
include = [
    "nsist/",
    "examples/",
    "doc/",
    "README.md",
    "LICENSE",
]
exclude = [
    ".venv/",
    "build/",
    ".cache/",
    "*.pyc",
    "__pycache__/",
]
