[build-system]
requires = ["setuptools >=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seiya"
version = "1.0.3"
description = "Enhanced Python Windows Installer Builder - fork of pynsist with .exe launchers, auto dependency resolution and custom logo support"
authors = [
    {name = "Seiya Contributors"},
]
maintainers = [
    {name = "Seiya Contributors"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests",
    "requests-download",
    "jinja2",
    "yarg",
    "distlib >=0.3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]

[project.optional-dependencies]
image = [
    "Pillow >=9.0.0",
]
test = [
    "testpath",
    "responses",
    "pytest",
]

[project.scripts]
seiya = "seiya:main"
pynsist = "seiya:main"

[project.urls]
Homepage = "https://github.com/tedelon/Seiya"
Documentation = "https://github.com/tedelon/Seiya#readme"
Source = "https://github.com/tedelon/Seiya"
Issues = "https://github.com/tedelon/Seiya/issues"

[tool.setuptools]
packages = ["seiya", "seiya.core"]
include-package-data = true

[tool.setuptools.package-data]
"seiya.core" = ["*.ico", "*.nsi", "msvcrt/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]
